<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tchip.testcamera.MainActivity" >

    <SurfaceView
        android:id="@+id/camera_surface"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/camera_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_exit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_switch" />

        <RadioGroup
            android:id="@+id/camera_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

           
        </RadioGroup>

        <Button
            android:id="@+id/camera_shutter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_shutter" />
        <Button
            android:id="@+id/camera_go_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_go_gallery" />
    </LinearLayout>

</RelativeLayout>