<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_record"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/record_bt_width"
            android:layout_height="wrap_content"
            android:text="@string/record_record" >
        </Button>

        <Button
            android:id="@+id/btn_play"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/record_bt_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/record_bt_horizontal_margin"
            android:text="@string/record_play" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/record_bt_vertical_margin"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSuccess"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/record_bt_width"
            android:layout_height="wrap_content"
            android:text="@string/pub_success" >
        </Button>

        <Button
            android:id="@+id/btnFail"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/record_bt_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/record_bt_horizontal_margin"
            android:text="@string/pub_fail" >
        </Button>
    </LinearLayout>

</LinearLayout>