<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@android:style/Holo.ButtonBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/link"
            android:textSize="20sp" >
        </TextView>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioWifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi" />

            <RadioButton
                android:id="@+id/radioEthernet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:checked="true"
                android:text="@string/ethernet" />
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/user"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/etUser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tvUser"
            android:layout_toRightOf="@id/tvUser"
            style="@android:style/Holo.Light.SegmentedButton"
            android:inputType="none" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tvUser"
            android:layout_alignTop="@+id/etPassword"
            android:layout_below="@id/tvUser"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/etUser"
            style="@android:style/Holo.Light.SegmentedButton"
            android:layout_below="@id/etUser"
            android:inputType="none" >
        </EditText>
    </RelativeLayout>

</LinearLayout>