<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/pub_vertical_margin"
    android:paddingLeft="@dimen/pub_horizontal_margin"
    android:paddingRight="@dimen/pub_horizontal_margin"
    android:paddingTop="@dimen/pub_vertical_margin"
    tools:context=".IndexActivity" >

    <TextView
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/exit" >
    </TextView>

    <!-- Header -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/main_icon"
            android:drawablePadding="@dimen/pub_title_padleft"
            android:gravity="bottom"
            android:text="@string/main_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/pub_title_size" />

        <Button
            android:id="@+id/reset_device_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/tv_soft_ver"
            android:text="@string/pub_reset_device" />

        <TextView
            android:id="@+id/tv_soft_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="top"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_head_line" />

    <!-- Content -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_version_info"
                android:textColor="@android:color/white"
                android:textSize="@dimen/main_listtitle_size" />

            <include layout="@layout/main_version" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/main_list_padtop"
                    android:text="@string/main_test_info"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/main_listtitle_size" />

                <TextView
                    android:id="@+id/config_file_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:paddingTop="@dimen/main_list_padtop"
                    android:text="@string/main_test_info"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <com.rockchip.devicetest.testcase.TestCaseListView
                android:id="@+id/main_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@android:color/transparent"
                android:listSelector="@drawable/testcase_list_selector" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_main_result"
            android:layout_width="600dip"
            android:layout_height="480dip"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:gravity="center"
            android:padding="100dip"
            android:text="@string/pub_pass"
            android:textColor="@color/holo_green_light"
            android:textSize="100sp"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>